--- a/client/src/style.css
+++ b/client/src/style.css
@@ -476,6 +476,17 @@ margin-left: 20px;
    
 }
 
+.margin {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.learnView{
+   width: 700px;
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
 .shopping{
   display: flex;
   margin-left: 20%;
